--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
 			}
 			@media (max-width:668px){
 				#bg1{
-					background-image: url(images/bg/Hero-sm.svg) !important;
+					background-image: url(images/bg/hero.svg) !important;
 				}
 				footer{
 					background-image: url(images/bg/Footer-BG-sm.svg) !important;
