--- a/index.html
+++ b/index.html
@@ -215,7 +215,7 @@
 				<video class="absolute" src="bg.mp4" autoplay loop playsinline muted></video>
 				<!------->
 				<div class="h-full flex items-center justify-center xl:pb-16 max-w-1240 mx-auto" id="sec-1">
-					<div class="lg:w-3/5 md:w-4/5 w-full px-7 text-center text-white bg-radial-gradient z-50 p-10">
+					<div class="lg:w-3/5 md:w-4/5 w-full px-7 text-center text-white bg-radial-gradient z-50 p-10 rounded-xl">
 						<h1 class=" lg:text-4xl text-3xl xl:text-5xl poppins font-extrabold leading-snug">It's Time to Upgrade your Digital Marketing to the NeXt Level!</h1>
 						<p class=" xl:text-2xl text-base font-semibold poppins mt-6">Websites<span class=" mx-4">|</span>Landing Pages<span class=" mx-4">|</span>Marketing Automation</p>
 						<!---->
