--- a/index.html
+++ b/index.html
@@ -38,6 +38,9 @@
 			body{
 				font-family: 'Montserrat', sans-serif;
 			}
+			.leading-snug {
+				line-height: 1.375;
+			}
 			img,
 			video {
 				object-fit: cover;
@@ -58,11 +61,13 @@
 			box-shadow: 0px 8px 24px 0px rgb(0 0 0 / 15%);
 			}
 			.bg-radial-gradient-1{
-				background: linear-gradient(
-				180deg, rgba(0, 0, 128, 0.91) 37.48%, rgba(0, 212, 255, 0.9) 109.26%);
+				background: radial-gradient(107% 103.13% at -3.38% 3.26%, #00d4ffdb 0%, #06429fe3 36.62%, #081e87d9 64.03%, #090979d9 100%);
 			}
 			.bg-radial-gradient{
 				background: radial-gradient(107% 103.13% at -3.38% 3.26%, #00D4FF 0%, #06429F 36.62%, #081E87 64.03%, #090979 100%);
+			}
+			.bg-radial-gradient-2{
+				background: radial-gradient(107% 103.13% at -3.38% 3.26%, #00d4ffdb 0%, #06429fe3 36.62%, #081e87d9 64.03%, #090979d9 100%);
 			}
 			#sec-1{
 				min-height: 585px;
@@ -122,7 +127,7 @@
 	<body x-data="{sticky: true}">
 		<!-- ==Header Section == -->
 		<header @scroll.window="sticky= (window.pageYOffset > 300) ? false :true"
-		:class="{'bg-radial-gradient duration-500 sticky drop-shadow-2xl' : !sticky , 'absolute' : sticky}"
+		:class="{'bg-radial-gradient duration-500 sticky drop-shadow-2xl' : !sticky , 'absolute bg-radial-gradient-2' : sticky}"
 		class="right-0 top-0 left-0 z-50">
 			<!----Main nav--->
 			<nav x-data="{humberger: false}" class="lg:px-20 xl:px-0 md:px-16 sm:px-10 px-7 py-4 max-w-1240 mx-auto">
@@ -224,10 +229,10 @@
 						<source src="videos/NXDS-Hero-Background-Video.mp4" type="video/mp4" />
 					</video>
 					<!------->
-					<div class="flex items-center justify-center absolute h-full w-full top-0 left-0 z-20 bg-radial-gradient-1 ">
-						<div class="2xl:w-1/2 lg:w-3/5 md:w-4/5 w-full px-7 text-center text-white pt-10 lg:pt-0">
-							<h1 class=" lg:text-4xl xl:text-5xl 2xl:text-6xl text-2xl md:text-3xl poppins font-extrabold leading-snug">It's Time to Upgrade your Digital Marketing to the NeXt Level!</h1>
-							<p class=" xl:text-2xl sm:text-base text-xs font-semibold poppins lg:mt-6 mt-4">Websites<span class=" mx-4">|</span>Landing Pages<span class=" mx-4">|</span>Marketing Automation</p>
+					<div class="flex items-center justify-center absolute h-full w-full top-0 left-0 z-20">
+						<div class="2xl:w-1/2 lg:w-3/5 md:w-4/5 w-full px-7 text-center text-white lg:px-20 sm:px-10 px-4 2xl:py-20 py-10 bg-radial-gradient-1 rounded-2xl mx-5 2xl:mt-20">
+							<h1 class=" lg:text-4xl 2xl:text-5xl text-2xl md:text-3xl poppins font-extrabold leading-snug tracking-wide">It's Time to Upgrade your Digital Marketing to the NeXt Level!</h1>
+							<p class=" xl:text-2xl sm:text-base text-xs font-semibold poppins lg:mt-6 mt-4 leading-snug">Websites<span class=" mx-4">|</span>Landing Pages<span class=" mx-4">|</span>Marketing Automation</p>
 							<!---->
 							<a class="xl:text-2xl sm:text-xl text-sm font-bold lg:h-16 sm:h-12 h-10 w-72 mx-auto lg:mt-10 mt-5 block flex items-center justify-center px-7 bg-white rounded-lg" href="#Get-Started">
 								<span class="gradient-text">Let’s Get Started!</span>
