--- a/index.html
+++ b/index.html
@@ -69,8 +69,8 @@
 			.bg-radial-gradient-2{
 				background: radial-gradient(107% 103.13% at -3.38% 3.26%, #00d4ffdb 0%, #06429fe3 36.62%, #081e87d9 64.03%, #090979d9 100%);
 			}
-			#sec-1{
-				min-height: 585px;
+			#hero{
+				height: 740px;
 			}
 			#sec-3{
 				min-height:1825px;
@@ -93,9 +93,6 @@
 				.w-100{
 				width: 400px;
 				}
-				#sec-1{
-					min-height: 785px;
-				}
 				#sec-3{
 				min-height:2465px;
 				}
@@ -115,8 +112,8 @@
 				}
 			}
 			@media (min-width: 1500px){
-				#sec-1{
-					min-height: 965px;
+				#hero{
+					height: 1080px;
 				}
 				#footer{
 				min-height:510px;
@@ -223,14 +220,14 @@
 			<!-----=====Sec 001=======----->
 			<section>
 				<!---->
-				<div class=" h-screen w-full flex justify-center items-center">
+				<div id="hero" class=" w-full flex justify-center items-center relative">
 					<!---->
 					<video class=" w-full h-full absolute top-0 left-0 z-10 object-cover" width="100%" height="100%" autoplay loop muted>
 						<source src="videos/NXDS-Hero-Background-Video.mp4" type="video/mp4" />
 					</video>
 					<!------->
 					<div class="flex items-center justify-center absolute h-full w-full top-0 left-0 z-20">
-						<div class="2xl:w-1/2 lg:w-3/5 md:w-4/5 w-full px-7 text-center text-white lg:px-20 sm:px-10 px-4 2xl:py-20 py-10 bg-radial-gradient-1 rounded-2xl mx-5 2xl:mt-20">
+						<div class="2xl:w-1/2 lg:w-3/5 md:w-4/5 w-full px-7 text-center text-white lg:px-20 sm:px-10 px-4 2xl:py-20 py-10 bg-radial-gradient-1 rounded-2xl mx-5">
 							<h1 class=" lg:text-4xl 2xl:text-5xl text-2xl md:text-3xl poppins font-extrabold leading-snug tracking-wide">It's Time to Upgrade your Digital Marketing to the NeXt Level!</h1>
 							<p class=" xl:text-2xl sm:text-base text-xs font-semibold poppins lg:mt-6 mt-4 leading-snug">Websites<span class=" mx-4">|</span>Landing Pages<span class=" mx-4">|</span>Marketing Automation</p>
 							<!---->
@@ -238,6 +235,10 @@
 								<span class="gradient-text">Let’s Get Started!</span>
 							</a>
 						</div>
+					</div>
+					<!------->
+					<div class=" absolute left-0 lg:-bottom-20 -bottom-3 w-full overflow-hidden lg:h-40 md:h-32 sm:h-20 h-8 z-30">
+						<svg viewBox="0 0 500 150" preserveAspectRatio="none" style="height: 100%; width: 100%;"><path d="M0.94,69.09 C262.81,-113.89 279.06,161.09 501.56,-0.90 L500.00,150.00 L0.00,150.00 Z" style="stroke: none; fill: rgb(255, 255, 255);"></path></svg>
 					</div>
 				</div>
 			</section>
