--- a/index.html
+++ b/index.html
@@ -103,10 +103,15 @@
 			}
 			@media (max-width:668px){
 				#hero{
-					height: 560px;
+					height: 620px;
 				}
 				footer{
 					background-image: url(images/bg/Footer-BG-sm.svg) !important;
+				}
+			}
+			@media (max-height: 450px){
+				#hero {
+					height: 450px;
 				}
 			}
 			@media (min-width: 1280px){
@@ -230,8 +235,8 @@
 						<source src="videos/NXDS-Hero-Background-Video.mp4" type="video/mp4" />
 					</video>
 					<!------->
-					<div class="flex items-center justify-center absolute h-full w-full top-0 left-0 z-20">
-						<div class="2xl:w-1/2 lg:w-3/5 md:w-4/5 w-full px-7 text-center text-white lg:px-20 sm:px-10 px-4 2xl:py-20 py-10 bg-radial-gradient-2 rounded-2xl mx-5">
+					<div class="flex items-center justify-center absolute h-full w-full top-0 left-0 z-20 md:px-0 px-5">
+						<div class="2xl:w-1/2 lg:w-3/5 md:w-4/5 w-full text-center text-white lg:px-20 sm:px-10 px-4 2xl:py-20 py-10 bg-radial-gradient-2 rounded-2xl ">
 							<h1 class=" lg:text-4xl text-2xl md:text-3xl poppins font-extrabold leading-snug tracking-wide">It's Time to Upgrade your Digital Marketing to the NeXt Level!</h1>
 							<p class=" xl:text-xl sm:text-base text-xs font-semibold poppins lg:mt-6 mt-4 leading-snug">Websites<span class=" mx-4">|</span>Landing Pages<span class=" mx-4">|</span>Marketing Automation</p>
 							<!---->
@@ -241,7 +246,7 @@
 						</div>
 					</div>
 					<!------->
-					<div class="absolute left-0 xl:-bottom-2 -bottom-5 w-full overflow-hidden lg:h-32 md:h-24 h-20 z-30">
+					<div class="absolute left-0 2xl:-bottom-32 lg:-bottom-20 md:-bottom-10 sm:-bottom-5 -bottom-2 w-full overflow-hidden z-30">
 						<img height="100%" width="295px" class="w-full h-auto" src="images/home/svgave.svg" alt="svg">
 					</div>
 				</div>
