--- a/index.html
+++ b/index.html
@@ -85,6 +85,10 @@
 			.drop-shadow-2xl-upper{
 				filter: drop-shadow(-0.35rem -0.35rem 0.4rem rgba(0, 0, 0, 0.5));
 			}
+			ul{
+				text-indent: -22px;
+    			margin-left: 24px;
+			}
 			@media (min-width:1300px){
 				.max-w-1240{
 				max-width: 1240px;
@@ -238,9 +242,9 @@
 					<div class="flex items-center justify-center absolute h-full w-full top-0 left-0 z-20 md:px-0 px-5">
 						<div class="2xl:w-1/2 lg:w-3/5 md:w-4/5 w-full text-center text-white lg:px-20 sm:px-10 px-4 2xl:py-20 py-10 bg-radial-gradient-2 rounded-2xl ">
 							<h1 class=" lg:text-4xl text-2xl md:text-3xl poppins font-extrabold leading-snug tracking-wide">It's Time to Upgrade your Digital Marketing to the NeXt Level!</h1>
-							<p class=" xl:text-xl sm:text-base text-xs font-semibold poppins lg:mt-6 mt-4 leading-snug">Websites<span class=" mx-4">|</span>Landing Pages<span class=" mx-4">|</span>Marketing Automation</p>
+							<p class=" xl:text-xl text-basefont-semibold poppins lg:mt-6 mt-4 leading-snug">Websites<span class=" mx-4">|</span>Landing Pages<span class=" mx-4">|</span>Marketing Automation</p>
 							<!---->
-							<a class="xl:text-2xl sm:text-xl text-sm font-bold lg:h-16 sm:h-12 h-10 w-72 mx-auto lg:mt-10 mt-5 block flex items-center justify-center px-7 bg-white rounded-lg" href="#Get-Started">
+							<a class="xl:text-2xl sm:text-xl text-lg font-bold lg:h-16 sm:h-12 h-10 w-72 mx-auto lg:mt-10 mt-5 block flex items-center justify-center px-7 bg-white rounded-lg" href="#Get-Started">
 								<span class="gradient-text">Let’s Get Started!</span>
 							</a>
 						</div>
